--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ button {
   height: 90px;
   align-items: center;
   justify-content: center;
-  fill: #757575;
+  fill: #AFB1B8;
 }
 /* .client-svg {
   fill: #757575;
